# Satmas

./: .gitignore  README.md  logic_encoding.py  pyproject.toml  simple_tests.py
__legacy/: README.md
__legacy/implementation/: input.yml  logic_encoding_tests.py
examples/minimal/: minimal_example.py  minimal_example.yml
implementation/: dimacs.txt  input.yml  logic_encoding.py  main.py  pyproject.toml  pyvenv.cfg
implementation/NE/: iterative.py  utils.py
implementation/Problem/: agent.py  problem.py  utils.py
implementation/SATSolver/: logic_encoding.py  solver.py  utils.py
implementation/Visualisation/: graph.py
implementation/test/: input12-bridge.yml  input2.yml  input4_full.yml  input6_full.yml
libs/open-wbo/: Makefile  open-wbo
proto/experiment/: experiment.proto  experimentExecutor.proto  experimentStateController.proto
proto/mra/: algorithm.proto  mra.proto
server/: main.py  pyvenv.cfg
src/core/: model_interpreter.py  open_wbo_solver.py  pysat_constructs.py
src/encoding/: overall_encoding.py
src/mra/: agent.py  problem.py  state.py
src/solvers/: pysat_solver.py
src/utils/: logging_helper.py  yaml_parser.py
tests/: five.yml  four.yml  one.yml  problem.yml  simple_tests.py  three.yml  two.yml  wDimacsExample.txt
tests/core/: test_pysat_constructs.py
tests/feedback/: a10r10d2c10b30.yml  a10r10d2c2b30.yml  a10r10d2c3b50.yml  a10r10d2c4b50.yml  a10r10d2c5b50.yml  a10r5d2c2b50.yml  a10r6d2c2b50.yml  a10r7d2c2b50.yml  a10r8d2c2b50.yml  a10r9d2c2b50.yml  a11r5d2c2b50.yml  (+4 more)
ui/: app.go  go.mod  go.sum  main.go  wails.json
(+270 files in other folders)
